--- a/charts/app/templates/app.deploy.yaml
+++ b/charts/app/templates/app.deploy.yaml
@@ -30,7 +30,7 @@ spec:
 {{ toYaml .Values.nodeSelector | indent 8 }}
       containers:
       - name: stash-app
-        image: "{{ .Values.image }}"
+        image: "{{ .Values.containerRegistry }}/{{ .Values.image }}"
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         imagePullPolicy: Always
