--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -1,5 +1,6 @@
 replicaCount: 1
 revisionHistoryLimit: 3
+containerRegistry: eu.gcr.io/stashify-218417
 image: IMAGE_TO_REPLACE
 hash: HASH_VERSION_TO_REPLACE
 resources:
