--- a/charts/app/templates/app.cm.yaml
+++ b/charts/app/templates/app.cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app-config
+  name: "{{ .Release.Name }}-config"
   labels:
     app: app
     version: "{{ .Values.hash }}"
