--- a/charts/auth/templates/auth.cm.yaml
+++ b/charts/auth/templates/auth.cm.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: auth-app-config
+  name: "{{ .Release.Name }}-config"
   labels:
-    app: auth
+    app: {{ .Release.Name }}
     version: "{{ .Values.hash }}"
     chart: "{{ .Chart.Name }}"
     release: "{{ .Release.Name }}"
