--- a/charts/manager/templates/manager.svc.yaml
+++ b/charts/manager/templates/manager.svc.yaml
@@ -1,9 +1,9 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: manager
+  name: {{ .Release.Name }}
   labels:
-    app: manager
+    app: {{ .Release.Name }}
     version: "{{ .Values.hash }}"
     chart: "{{ .Chart.Name }}"
     release: "{{ .Release.Name }}"
@@ -11,9 +11,9 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: manager
+    app: {{ .Release.Name }}
   ports:
-    - name: manager-app
+    - name: "http-{{ .Release.Name }}"
       port: {{ .Values.service.externalPort }}
       targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
