--- a/charts/auth/templates/auth.vs.yaml
+++ b/charts/auth/templates/auth.vs.yaml
@@ -20,7 +20,7 @@ spec:
         prefix: /
     route:
     - destination:
-        host: "{{ .Release.Name }}.{{ .Release.Namespace }}.svc"
+        host: "{{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.local"
         port:
           number: {{ .Values.service.internalPort }}
 {{- end }}
