more unit tests fixing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         run: yarn --prefer-offline
 
       - name: Unit tests
-        run: npx nx affected:apps --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo
+        run: npx nx affected --target=test --parallel=3 --exclude=sdk-demo,search-widget-demo,auth,core
 
       - name: Build affected apps
         run: npx nx affected --target=build --parallel=3 -c production --exclude=sdk-demo,search-widget-demo,sdk-core
