--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "public-ssr:serve": "node dist/public-public/server/main.js",
     "workspace-generator": "nx workspace-generator",
     "sdk:build": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cp package.json README.md ../../dist/sdk-core && cd - && cp ./LICENSE.md dist/sdk-core",
-    "widget:build": "ng build widget --prod --single-bundle --output-hashing none"
+    "widget:build": "ng build widget --prod --single-bundle --output-hashing none",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
@@ -89,6 +90,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.2.1",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "13.2.1",
     "@angular/compiler-cli": "13.2.0",
     "@angular/language-service": "13.2.0",
@@ -105,7 +110,7 @@
     "@nxext/svelte": "^13.1.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "10.1.7",
+    "@schematics/angular": "^13.3.5",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
@@ -127,6 +132,7 @@
     "@typescript-eslint/parser": "5.10.2",
     "codelyzer": "6.0.2",
     "dotenv": "10.0.0",
+    "electron": "^17.0.0",
     "eslint": "8.7.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
@@ -143,6 +149,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "ng-packagr": "13.2.1",
     "ngx-build-plus": "11.0.0",
+    "nx-electron": "^13.0.0",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
