--- a/package.json
+++ b/package.json
@@ -116,6 +116,9 @@
     "@tsconfig/svelte": "^2.0.1",
     "@types/core-js": "^2.5.4",
     "@types/d3": "^5.16.3",
+    "@types/gapi": "^0.0.41",
+    "@types/gapi.auth2": "^0.0.56",
+    "@types/gapi.drive": "^0.0.2",
     "@types/jasmine": "3.6.11",
     "@types/jest": "27.0.2",
     "@types/jexl": "^2.2.0",
