--- a/angular.json
+++ b/angular.json
@@ -327,7 +327,7 @@
       "projectType": "application",
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
-      "prefix": "dtp",
+      "prefix": "da",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
