--- a/charts/manager/templates/manager.cm.yaml
+++ b/charts/manager/templates/manager.cm.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: '{{ .Release.Name }}-config'
+  name: "{{ .Release.Name }}-config"
   labels:
-    app: { { .Release.Name } }
-    version: '{{ .Values.hash }}'
-    chart: '{{ .Chart.Name }}'
-    release: '{{ .Release.Name }}'
-    heritage: '{{ .Release.Service }}'
+    app: {{ .Release.Name }}
+    version: "{{ .Values.hash }}"
+    chart: "{{ .Chart.Name }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 data:
-  API_PATH: { { .Values.api_path } }
-  SITE_KEY: '{{ .Values.site_key }}'
-  APP_NAME: { { .Values.app_name } }
-  SENTRY_ENV: { { .Values.sentry_environment } }
-  SENTRY_URL: '{{ .Values.sentry_url }}'
-  STF_VERSION: '{{ .Chart.Version }}'
-  EMAIL_DOMAIN: '{{ .Values.email_domain }}'
+  API_PATH: {{ .Values.api_path }}
+  SITE_KEY: "{{ .Values.site_key }}"
+  APP_NAME: {{ .Values.app_name }}
+  SENTRY_ENV: {{ .Values.sentry_environment }}
+  SENTRY_URL: "{{ .Values.sentry_url }}"
+  STF_VERSION: "{{ .Chart.Version }}"
+  EMAIL_DOMAIN: "{{ .Values.email_domain }}"
