--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "codelyzer": "6.0.2",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
+    "electron-builder": "^23.0.2",
     "eslint": "8.7.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
