--- a/angular.json
+++ b/angular.json
@@ -356,6 +356,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "./",
               "outputHashing": "all",
               "serviceWorker": false,
               "fileReplacements": [
