--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "flaps",
-  "version": "0.0.0",
+  "name": "nuclia",
+  "version": "1.0.0",
   "license": "MIT",
-  "author": "Flaps.io",
-  "description": "Flaps Desktop synchronization app",
+  "author": "Nuclia.cloud",
+  "description": "Nuclia frontend apps and libs",
   "scripts": {
     "ng": "nx",
     "nx": "nx",
