--- a/angular.json
+++ b/angular.json
@@ -380,6 +380,25 @@
                 }
               ]
             },
+            "stage": {
+              "baseHref": "./",
+              "outputHashing": "all",
+              "serviceWorker": false,
+              "assets": [
+                "apps/desktop/src/favicon.ico",
+                "apps/desktop/src/assets",
+                {
+                  "glob": "**/*",
+                  "input": "libs/pastanaga/src/assets",
+                  "output": "assets"
+                },
+                {
+                  "glob": "**/*",
+                  "input": "apps/desktop/src/environments_config/local-stage",
+                  "output": "assets/deployment"
+                }
+              ]
+            },
             "local-stage": {
               "aot": false,
               "buildOptimizer": false,
