--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,7 +114,8 @@ jobs:
     name: Deploy dashboard
     runs-on: ubuntu-latest
     needs: build
-    if: needs.build.outputs.deploy-app == 'yes'
+    # if: needs.build.outputs.deploy-app == 'yes'
+    if: ${{ false }} # disable for now
 
     steps:
       - name: Checkout repository
