--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,35 +33,35 @@ jobs:
       - name: Check if build succeeds
         run: npx nx affected --target=build --parallel=3 -c production --exclude=sdk-demo,search-widget-demo,sdk-core
 
-  deploy-desktop:
-    name: Deploy desktop
-    runs-on: ${{ matrix.os }}
+  # deploy-desktop:
+  #   name: Deploy desktop
+  #   runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+  #   strategy:
+  #     matrix:
+  #       os: [macos-latest, ubuntu-latest, windows-latest]
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: nrwl/nx-set-shas@v2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: Install project dependencies
-        run: yarn --prefer-offline
-      - name: Build desktop app
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-        run: |-
-          npx nx build desktop -c production
-          npx nx build desktop-electron -c production
-          npx nx run desktop-electron:make --publish always
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - uses: nrwl/nx-set-shas@v2
+  #     - name: Get yarn cache directory path
+  #       id: yarn-cache-dir-path
+  #       run: echo "::set-output name=dir::$(yarn cache dir)"
+  #     - uses: actions/cache@v2
+  #       id: yarn-cache
+  #       with:
+  #         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-yarn-
+  #     - name: Install project dependencies
+  #       run: yarn --prefer-offline
+  #     - name: Build desktop app
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.github_token }}
+  #       run: |-
+  #         npx nx build desktop -c production
+  #         npx nx build desktop-electron -c production
+  #         npx nx run desktop-electron:make --publish always
