--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^23.0.2",
+    "electron-notarize": "^1.2.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
