allow to get machine id from electron app

--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "@sentry/tracing": "^6.19.7",
     "@swimlane/ngx-dnd": "^9.0.0",
     "angular-svg-icon": "^13.0.0",
+    "child_process": "^1.0.2",
     "core-js": "^3.6.4",
+    "crypto": "^1.0.1",
     "d3": "^5.15.0",
     "fuse.js": "^3.6.1",
     "latinize": "^0.5.0",
@@ -73,6 +75,7 @@
     "ngx-quill": "^13.3.1",
     "ngx-ui-tour-core": "^7.0.2",
     "ngx-ui-tour-md-menu": "^7.0.2",
+    "node-machine-id": "^1.1.12",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
     "quill": "^1.3.7",
@@ -134,6 +137,7 @@
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
     "codelyzer": "6.0.2",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^23.0.2",
